recursion.lessons.recursion.koch.Koch.scala.error
Koch:20: error: reassignment to val
		levels=levels-1;
                      ^